added push notification

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="blue">#1B649A</color>
     <color name="primary_dark">#1B649A</color>
+    <color name="white">#FFF</color>
 </resources>
